--- a/H2E_classifier.ipynb
+++ b/H2E_classifier.ipynb
@@ -28,6 +28,27 @@
     },
     {
       "metadata": {
+        "id": "kNvMGJz8tq48",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# H2E classifier\n",
+        "Hinglish to English classifier using LSTM"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "5ILzM_2GuSwO",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Uploading cleaned data and stopwords for hinglish\n"
+      ]
+    },
+    {
+      "metadata": {
         "id": "hQKF362KwK9M",
         "colab_type": "code",
         "colab": {
@@ -104,20 +125,22 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 68
         },
-        "outputId": "c1c750f8-33ca-40d2-c124-b09c9055d79a"
+        "outputId": "c23a2477-523e-4f1c-9892-ddd7dec12885"
       },
       "cell_type": "code",
       "source": [
         "!ls"
       ],
-      "execution_count": 19,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "english_text.csv  hinglish_text.csv  sample_data  stopwords_list.txt\r\n"
+            "english_text (1).csv   hinglish_text.csv       stopwords_list.txt\n",
+            "english_text.csv       sample_data\n",
+            "hinglish_text (1).csv  stopwords_list (1).txt\n"
           ],
           "name": "stdout"
         }
@@ -125,9 +148,23 @@
     },
     {
       "metadata": {
+        "id": "-mo2NqZZuziu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Importing modules"
+      ]
+    },
+    {
+      "metadata": {
         "id": "YTMH9s0LOVfE",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f597d64a-c706-47c7-a9a8-51858fbf7cb1"
       },
       "cell_type": "code",
       "source": [
@@ -152,8 +189,16 @@
         "\n",
         "%matplotlib inline"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "metadata": {
@@ -163,22 +208,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "de1e0db5-eba7-4347-dd12-9a49d9c6e46f"
+        "outputId": "2b1cc6fc-1de8-4cc3-a1e8-25c08e753b35"
       },
       "cell_type": "code",
       "source": [
         "nltk.download(\"stopwords\")\n",
         "nltk.download(\"punkt\")"
       ],
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         },
@@ -192,8 +237,19 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 3
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "IyIChSeYvp45",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Retrieving english dataset \n",
+        "Taking only 8000 sentences and neglects remaining data"
       ]
     },
     {
@@ -204,7 +260,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "0552c9fe-bdc5-4437-b6ae-51533c534a83"
+        "outputId": "8c77c20e-7017-4eed-d04b-2c8682613e9c"
       },
       "cell_type": "code",
       "source": [
@@ -212,7 +268,7 @@
         "new_english = english[:8000]\n",
         "new_english.head()\n"
       ],
-      "execution_count": 27,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -282,8 +338,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 4
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "H22BBE92whBY",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Retrieving hinglish dataset\n"
       ]
     },
     {
@@ -294,14 +360,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "558bdf74-2d40-4b5f-d0cd-bacc0234379a"
+        "outputId": "f5b6acd6-7083-4ddc-9207-e30172c96347"
       },
       "cell_type": "code",
       "source": [
         "hinglish = pd.read_csv(\"hinglish_text.csv\")\n",
         "hinglish.head()\n"
       ],
-      "execution_count": 28,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +437,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 5
         }
       ]
     },
@@ -383,14 +449,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "e18c17d4-2afd-4a7a-e74e-17cc4ed52953"
+        "outputId": "9dc78d4e-7c78-4600-cb6d-e9ae98dd63e0"
       },
       "cell_type": "code",
       "source": [
         "print(\"Length of english data = \", len(new_english))\n",
         "print(\"Length of hinglish data = \", len(hinglish))"
       ],
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,6 +466,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "WCllSTMPwxn9",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Function to remove english stopwords"
       ]
     },
     {
@@ -417,6 +493,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Y9xkRaO_w5RT",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Fucntion to remove hinglish stopwords"
+      ]
     },
     {
       "metadata": {
@@ -444,6 +530,16 @@
     },
     {
       "metadata": {
+        "id": "Mft7JF62xPNE",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Removing english stopwords"
+      ]
+    },
+    {
+      "metadata": {
         "id": "eGqFzHyVdZr-",
         "colab_type": "code",
         "colab": {}
@@ -454,6 +550,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "1FYGilhxxWFo",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Removing hinglish stopwords"
+      ]
     },
     {
       "metadata": {
@@ -478,6 +584,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "wIPHf2xExbRp",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Creating characters of words and merging both lists together"
       ]
     },
     {
@@ -519,6 +635,17 @@
     },
     {
       "metadata": {
+        "id": "lJVtSFBxxpVC",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Total hinglish words = 20,000\n",
+        "##Total english words = 20,000"
+      ]
+    },
+    {
+      "metadata": {
         "id": "YX4lPlkY_Z8s",
         "colab_type": "code",
         "colab": {
@@ -545,33 +672,12 @@
     },
     {
       "metadata": {
-        "id": "nr6OeiTpvSl1",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "e4a7f894-7a23-4a48-c1f0-632087869c84"
+        "id": "hszjfqQvx8bS",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "len(ls)\n",
-        "ls[2002]"
-      ],
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(['t', 'o', 'e'], 0)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 45
-        }
+        "##Creating a dictionary of alphabets for indexing the characters obtained from words"
       ]
     },
     {
@@ -590,6 +696,16 @@
     },
     {
       "metadata": {
+        "id": "CphUe32OyEJX",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Seprating words and labels into different lists"
+      ]
+    },
+    {
+      "metadata": {
         "id": "UHKx5sAZdI5u",
         "colab_type": "code",
         "colab": {}
@@ -601,6 +717,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "FPcuoIzmyKn6",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Getting maximum length of word in the list"
+      ]
     },
     {
       "metadata": {
@@ -635,6 +761,16 @@
     },
     {
       "metadata": {
+        "id": "jMC7GB6TyOpj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Splitting data into train and validation set where training data is 80% and validation data is 20%"
+      ]
+    },
+    {
+      "metadata": {
         "id": "KMkeJ_iSeWUw",
         "colab_type": "code",
         "colab": {}
@@ -645,6 +781,17 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "XOyrgrIszByJ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Training data = 32000\n",
+        "##Validation data = 8000"
+      ]
     },
     {
       "metadata": {
@@ -671,6 +818,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "w2WIJCX-zPQS",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Creating indexing of characters by map it to alphabets"
       ]
     },
     {
@@ -713,32 +870,12 @@
     },
     {
       "metadata": {
-        "id": "kf8rkqQB4V_a",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "c13ebfd3-b7e3-402d-d061-c58b6fc9fd6c"
+        "id": "lPdXxSOjzbMB",
+        "colab_type": "text"
       },
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "len(max(final_train,key = len))"
-      ],
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "62"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 54
-        }
+        "##Insert padding to make them of equal length"
       ]
     },
     {
@@ -866,6 +1003,16 @@
     },
     {
       "metadata": {
+        "id": "QHeI1v1mzpD_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Applying one-hot encoding to padded docs"
+      ]
+    },
+    {
+      "metadata": {
         "id": "b8YNXwh7A_qC",
         "colab_type": "code",
         "colab": {}
@@ -916,6 +1063,16 @@
     },
     {
       "metadata": {
+        "id": "CZXdwL8Oz3zZ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Converting labels into arrays"
+      ]
+    },
+    {
+      "metadata": {
         "id": "qwAPmmPl83G0",
         "colab_type": "code",
         "colab": {}
@@ -952,6 +1109,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Rd1icvSNz8iB",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Creating model with one LSTM layer and two Dense layers using RMSprop optimizer"
       ]
     },
     {
@@ -1002,6 +1169,16 @@
     },
     {
       "metadata": {
+        "id": "ER1mKaW_0M-l",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Fitting the model"
+      ]
+    },
+    {
+      "metadata": {
         "id": "dFK0frzh-Uir",
         "colab_type": "code",
         "colab": {
@@ -1037,6 +1214,16 @@
     },
     {
       "metadata": {
+        "id": "5fIwk5_l0Qc9",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Save the model "
+      ]
+    },
+    {
+      "metadata": {
         "id": "It0GT0hU-7PW",
         "colab_type": "code",
         "colab": {}
@@ -1050,6 +1237,16 @@
     },
     {
       "metadata": {
+        "id": "_OyjNUUE0Txj",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Load model"
+      ]
+    },
+    {
+      "metadata": {
         "id": "bnODHYdfrPHO",
         "colab_type": "code",
         "colab": {}
@@ -1060,6 +1257,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "zDEIFznx0ViF",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Function for making predictions"
+      ]
     },
     {
       "metadata": {
@@ -1092,20 +1299,31 @@
     },
     {
       "metadata": {
+        "id": "y2qZemQI0YaD",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Testing our model using a sentence \n",
+        "Getting results word wise"
+      ]
+    },
+    {
+      "metadata": {
         "id": "Hk9Sdw57aFxt",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
         },
-        "outputId": "da2005bb-ec1d-46e1-948b-6e2efacd3e16"
+        "outputId": "da599123-2302-411b-e75f-e81361295573"
       },
       "cell_type": "code",
       "source": [
-        "result = predict(\"abhi time nahi hai mere pass\")\n",
+        "result = predict(\"mujhe agle hafte Amsterdam jana hai\")\n",
         "print(result)"
       ],
-      "execution_count": 95,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "stream",
@@ -1114,7 +1332,7 @@
             "[[1]\n",
             " [0]\n",
             " [1]\n",
-            " [1]\n",
+            " [0]\n",
             " [1]\n",
             " [1]]\n"
           ],
@@ -1150,6 +1368,16 @@
           },
           "execution_count": 96
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "PQ2y-7JH0rw9",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Comparison training accuracy and validation accuracy"
       ]
     },
     {
@@ -1193,6 +1421,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Up2_Umsd04Fu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "##Comparing training loss and validation loss"
       ]
     },
     {
